--- a/src/main/webapp/.gitignore
+++ b/src/main/webapp/.gitignore
@@ -1,6 +1,6 @@
-/target/
+target/
 !.mvn/wrapper/maven-wrapper.jar
-
+**/src/main/frontend/node_modules
 ### STS ###
 .apt_generated
 .classpath
@@ -8,7 +8,6 @@
 .project
 .settings
 .springBeans
-.sts4-cache
 
 ### IntelliJ IDEA ###
 .idea
@@ -17,16 +16,9 @@
 *.ipr
 
 ### NetBeans ###
-/nbproject/private/
-/build/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
-## Angular
-node_modules
-node
-
-#java
-target
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
