--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <name>Helmes-task-api</name>
     <description>project for from helmes</description>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -23,6 +23,7 @@
         <java.version>1.8</java.version>
         <node.version>v8.12.0</node.version>
         <npm.version>5.4.2</npm.version>
+        <start-class>com.helmes.task.HelmesTaskApplication</start-class>
     </properties>
 
     <dependencies>
@@ -88,27 +89,12 @@
     <build>
         <plugins>
             <plugin>
-                <!-- Build an executable JAR -->
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.1.0</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.helmes.task.HelmesTaskApplication</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>${maven-war-plugin.version}</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
-                    <warSourceDirectory>target/www/</warSourceDirectory>
+                    <warSourceDirectory>target/static</warSourceDirectory>
                     <webResources>
                         <resource>
                             <directory>src/main/webapp</directory>
